# rosalind

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml  run_tests.rs  scale_test_results.txt
.github/workflows/: ci.yml
benches/: simulation_bench.rs
examples/: basic_simulation.rs  scale_performance_test.rs  space_benchmark.rs  verify_installation.rs
examples/data/: aln.tsv  reads.txt  ref.fa
python/: README.md
scripts/: benchmark_formats.py  generate_toy_data.py  run_scale_test.sh  test_all.sh  test_runner.sh
src/: lib.rs  main.rs
src/algebra/: combiner.rs  field.rs  mod.rs  polynomial.rs
src/blocking/: interface.rs  mod.rs  summary.rs
src/framework/: compressed_eval.rs  mod.rs
src/genomics/: block_alignment.rs  bwt_aligner.rs  compressed_dna.rs  fm_index.rs  io.rs  mod.rs  pileup.rs  rank_select.rs  statistics.rs  types.rs  variant_caller.rs  vcf.rs
src/ledger/: mod.rs
src/machine/: config.rs  mod.rs  transition.rs
src/plugin/: api.rs  examples.rs  mod.rs  registry.rs
src/python_bindings/: mod.rs
src/space/: allocator.rs  mod.rs
src/tree/: mod.rs  node.rs  traversal.rs
src/util/: index_free.rs  mod.rs
tests/: algebra.rs  alignment_pipeline.rs  correctness.rs  determinism.rs  fm_index_props.rs  golden_vcf.rs  integration.rs  ledger.rs  scale_test_helpers.rs  space_bounds.rs  test_helpers.rs  variant_pipeline.rs
tests/common/: mod.rs
tests/snapshots/variants/: simple.vcf
