[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rosalind-py"
version = "0.1.0"
description = "Python bindings for Rosalind genomics engine"
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}

[tool.maturin]
module-name = "rosalind_py"
features = ["python-bindings"]
